--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -5,29 +5,124 @@
     <title>Book List</title>
     <link rel = "stylesheet", type = text/css th:href = "@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" >
-    <link rel = "stylesheet" href = "/Users/dnee/Documents/tryJava/book/src/main/resources/static/book.css"></style>
+    <link rel="stylesheet" href="/css/book.css">
 </head>
 </head>
-<body>
-    <div class = "container-fluid text-center">
+<body style = "background-color: rgba(246, 246, 246, 0.92);">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class = "container-fluid collapse navbar-collapse">
+            <a class="navbar-brand logo" th:href = "@{/}">
+                <i class="bi bi-book"></i>
+                To Be Read
+              </a>
+            
+            <ul class="nav navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" th:href = "@{/}">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href = "@{/books}">Your Library</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href = "@{/books/new}">Add a Book</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href = "@{/books/login}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href = "@{/books/signup}">Sign Up</a>
+                </li>
+
+            
+        </div>    
+    </nav>
+    
+    <div class = "container-fluid text-center my-3">
         <h1>Manage Books</h1>
         <a class = "btn btn-primary active h2 m-2" th:href = "@{/books/new}">Add a new book</a>
     </div>
     
-    <div th:if = "${message}" class = "alert alert-success text-center" th:text = "${message}"></div>
+    
+
+    <div th:if = "${message}" class = "alert alert-success text-center" id = "alert-message" th:text = "${message}"></div>
 
     <div>
-        <table class = "table table-bordered table-hover text-center" style = "max-width: 95%; margin: 0 auto;">
+        <table class = "table table-bordered table-hover text-center" >
             <thead class ="thead-dark">
                 <tr>
-                    <th>ID</th>
-                    <th>Book Title</th>
-                    <th>Author</th>
-                    <th>Genre</th>
-                    <th>Status</th>
-                    <th>Date Started</th>
-                    <th>Date Finished</th>
-                    <th>Rating</th>
+                    <th>ID
+                        <div>
+                            <a th:href="@{'/books?sortField=id&sortDir=' + ${sortField == 'id' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-caret-up-fill"></i>
+                            </a>
+                            <a th:href="@{'/books?sortField=id&sortDir=' + ${sortField == 'id' && sortDir == 'desc' ? 'asc' : 'desc'}}">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </th>
+                    
+                    <th>Book Title
+                        <div>
+                            <a th:href="@{'/books?sortField=title&sortDir=' + ${sortField == 'title' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-caret-up-fill"></i>
+                            </a>
+                            <a th:href="@{'/books?sortField=title&sortDir=' + ${sortField == 'title' && sortDir == 'desc' ? 'asc' : 'desc'}}">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </th>
+                    <th>Author
+                        <div>
+                            <a th:href="@{'/books?sortField=author&sortDir=' + ${sortField == 'author' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-caret-up-fill"></i>
+                            </a>
+                            <a th:href="@{'/books?sortField=author&sortDir=' + ${sortField == 'author' && sortDir == 'desc' ? 'asc' : 'desc'}}">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </th>
+                    <th>Genre
+                        <div>
+                            <a th:href="@{'/books?sortField=genre&sortDir=' + ${sortField == 'genre' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-caret-up-fill"></i>
+                            </a>
+                            <a th:href="@{'/books?sortField=genre&sortDir=' + ${sortField == 'genre' && sortDir == 'desc' ? 'asc' : 'desc'}}">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </th>
+                    <th>Status
+                        <div>
+                            <a th:href="@{'/books?sortField=status&sortDir=' + ${sortField == 'status' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-caret-up-fill"></i>
+                            </a>
+                            <a th:href="@{'/books?sortField=status&sortDir=' + ${sortField == 'status' && sortDir == 'desc' ? 'asc' : 'desc'}}">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </th>
+                    <th>Date Started
+                        <div>
+                            <i class="bi bi-caret-up-fill"></i>
+                            <i class="bi bi-caret-down-fill"></i>
+                        </div>
+                    </th>
+                    <th>Date Finished
+                        <div>
+                            <i class="bi bi-caret-up-fill"></i>
+                            <i class="bi bi-caret-down-fill"></i>
+                        </div>
+                    </th>
+                    <th>Rating
+                        <div>
+                            <a th:href="@{'/books?sortField=rating&sortDir=' + ${sortField == 'rating' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-caret-up-fill"></i>
+                            </a>
+                            <a th:href="@{'/books?sortField=rating&sortDir=' + ${sortField == 'rating' && sortDir == 'desc' ? 'asc' : 'desc'}}">
+                                <i class="bi bi-caret-down-fill"></i>
+                            </a>
+                        </div>
+                    </th>
                     <th>Review</th>
                     <th>Actions</th>
                 </tr>
@@ -46,10 +141,10 @@
                     <td th:text = "${book.rating}"></td>
                     <td th:text = "${book.review}"></td>
                     <td>
-                        <a class = "btn btn-success h5 mr-3 active " th:href = "@{'/books/edit/' + ${book.id}}">
+                        <a class = "btn btn-warning h5 mr-3 active" th:href = "@{'/books/edit/' + ${book.id}}">
                             <i class="bi bi-pencil-square"></i>  Edit
                         </a>
-                        <a class = "btn btn-danger h5 mr-3 active " th:href = "@{'/books/delete/' + ${book.id}}">
+                        <a class = "btn btn-danger h5 mr-3 active" th:href = "@{'/books/delete/' + ${book.id}}">
                             <i class="bi bi-trash"></i>  Delete
                         </a>
                     </td>
@@ -59,5 +154,16 @@
             </tbody>
         </table>
     </div>
+    <div class = "my-3">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item" th:classappend="${pageNumber == currentPage} ? 'active'">
+                    <a class="page-link" th:href="@{'/books?page=' + ${pageNumber} + '&sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">1</a>
+                </li>
+                
+            </ul>
+          </nav>
+    </div>
+    <script src="/javascript/book.js"></script>
 </body>
 </html>
