--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel = "stylesheet", type = text/css th:href = "@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" >
 <body>
-    <div class = "container-fluid text-center">
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
+        <div class = "container-fluid collapse navbar-collapse">
+            <a class="navbar-brand logo" th:href = "@{/}">
+                <i class="bi bi-book"></i>
+                To Be Read
+              </a>
+            
+            <ul class="nav navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" th:href = "@{/}">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href = "@{/books}">Your Library</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href = "@{/books/new}">Add a Book</a>
+                </li>
+
+            
+        </div>    
+    </nav>
+
+    <div class = "container-fluid text-center my-5">
         <h1>Welcome to Your Book Journal</h1>
         <a class = "h2" th:href = "@{/books}" > Manage Your Entry</a>
     </div>
+    
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
