--- a/src/main/resources/templates/book-form.html
+++ b/src/main/resources/templates/book-form.html
@@ -94,16 +94,15 @@
 
                 <div class = "form-group row">
                     <label for = "rating" class = "col-sm-4 col-form-label" id = "rating" >Rating</label>
-                    <div class = "col-sm-8" id = "rating-bar">
-                        <span>
-                            <i class = "bi bi-star-fill icon-hover" style = "color: gray;"></i>
-                            <i class = "bi bi-star-fill icon-hover" style = "color: gray;"></i>
-                            <i class = "bi bi-star-fill icon-hover" style = "color: gray;"></i>
-                            <i class = "bi bi-star-fill icon-hover" style = "color: gray;"></i>
-                            <i class = "bi bi-star-fill icon-hover" style = "color: gray;"></i>
-                            </span>
-                        
+                    <div class = "rating col-sm-8" id = "rating-bar">
+                        <span class = "bi bi-star-fill"  data-value="5"></span>
+                        <span class = "bi bi-star-fill"  data-value="4"></span>
+                        <span class = "bi bi-star-fill"  data-value="3"></span>
+                        <span class = "bi bi-star-fill"  data-value="2"></span>
+                        <span class = "bi bi-star-fill"  data-value="1"></span>                        
                     </div>
+
+                    <input type="hidden" id="rating-value" name="rating" value="1" th:field = "*{rating}">
                 </div>
 
                 <div class = "form-group row"> 
@@ -113,9 +112,9 @@
                     </div>
                 </div>
 
-                <div class = "text-center">
+                <div class = "text-center my-2">
                     <button type = "submit" class = "btn btn-primary m-2">Save</button>
-                    <button type = "button" class = "btn btn-secondary m-2" th:href = "@{/books}" onclick="cancelForm()">Cancel</button>
+                    <button type = "button" class = "btn btn-secondary m-2" id = "cancelBtn" th:href = "@{/books}" onclick="cancelForm()">Cancel</button>
                 </div>
     
         </form>
@@ -125,8 +124,11 @@
 
     </div>
     
-    <script type = "text/javascript">
-        
+    <script src="/javascript/book-form.js"></script>
+    <script>
+        function cancelForm(){
+            window.location = "[[@{/books}]]";
+        }
     </script>
 </body>
 </html>
