--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Home</title>
     <link rel = "stylesheet", type = text/css th:href = "@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" >
+   
 <body>
     <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
         <div class = "container-fluid collapse navbar-collapse">
@@ -23,6 +24,12 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href = "@{/books/new}">Add a Book</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href = "@{/books/login}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href = "@{/books/signup}">Sign Up</a>
+                </li>
 
             
         </div>    
@@ -30,7 +37,7 @@
 
     <div class = "container-fluid text-center my-5">
         <h1>Welcome to Your Book Journal</h1>
-        <a class = "h2" th:href = "@{/books}" > Manage Your Entry</a>
+        <a class = "h2" th:href = "@{/books}">Manage Your Entry</a>
     </div>
     
     
