--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -27,10 +27,10 @@
                     <a class="nav-link" th:href = "@{/books/new}">Add a Book</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href = "@{/books/login}">Login</a>
+                    <a class="nav-link" th:href = "@{/login}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href = "@{/books/signup}">Sign Up</a>
+                    <a class="nav-link" th:href = "@{/signup}">Sign Up</a>
                 </li>
 
             
@@ -48,78 +48,65 @@
 
     <div>
         <table class = "table table-bordered table-hover text-center" >
-            <thead class ="thead-dark">
+            <thead class="table-light align-middle">
                 <tr>
-                    <th>ID
-                        <div>
-                            <a th:href="@{'/books?sortField=id&sortDir=' + ${sortField == 'id' && sortDir == 'asc' ? 'desc' : 'asc'}}">
-                                <i class="bi bi-caret-up-fill"></i>
+                    <th>#
+                        <div class = "container">
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${sortField == 'id' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
                             </a>
-                            <a th:href="@{'/books?sortField=id&sortDir=' + ${sortField == 'id' && sortDir == 'desc' ? 'asc' : 'desc'}}">
-                                <i class="bi bi-caret-down-fill"></i>
-                            </a>
+                           
                         </div>
                     </th>
                     
                     <th>Book Title
                         <div>
-                            <a th:href="@{'/books?sortField=title&sortDir=' + ${sortField == 'title' && sortDir == 'asc' ? 'desc' : 'asc'}}">
-                                <i class="bi bi-caret-up-fill"></i>
-                            </a>
-                            <a th:href="@{'/books?sortField=title&sortDir=' + ${sortField == 'title' && sortDir == 'desc' ? 'asc' : 'desc'}}">
-                                <i class="bi bi-caret-down-fill"></i>
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=title&sortDir=' + ${sortField == 'title' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
                             </a>
                         </div>
                     </th>
                     <th>Author
                         <div>
-                            <a th:href="@{'/books?sortField=author&sortDir=' + ${sortField == 'author' && sortDir == 'asc' ? 'desc' : 'asc'}}">
-                                <i class="bi bi-caret-up-fill"></i>
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=author&sortDir=' + ${sortField == 'author' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
                             </a>
-                            <a th:href="@{'/books?sortField=author&sortDir=' + ${sortField == 'author' && sortDir == 'desc' ? 'asc' : 'desc'}}">
-                                <i class="bi bi-caret-down-fill"></i>
-                            </a>
+                            
                         </div>
                     </th>
                     <th>Genre
                         <div>
-                            <a th:href="@{'/books?sortField=genre&sortDir=' + ${sortField == 'genre' && sortDir == 'asc' ? 'desc' : 'asc'}}">
-                                <i class="bi bi-caret-up-fill"></i>
-                            </a>
-                            <a th:href="@{'/books?sortField=genre&sortDir=' + ${sortField == 'genre' && sortDir == 'desc' ? 'asc' : 'desc'}}">
-                                <i class="bi bi-caret-down-fill"></i>
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=genre&sortDir=' + ${sortField == 'genre' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
                             </a>
                         </div>
                     </th>
                     <th>Status
                         <div>
-                            <a th:href="@{'/books?sortField=status&sortDir=' + ${sortField == 'status' && sortDir == 'asc' ? 'desc' : 'asc'}}">
-                                <i class="bi bi-caret-up-fill"></i>
-                            </a>
-                            <a th:href="@{'/books?sortField=status&sortDir=' + ${sortField == 'status' && sortDir == 'desc' ? 'asc' : 'desc'}}">
-                                <i class="bi bi-caret-down-fill"></i>
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=status&sortDir=' + ${sortField == 'status' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
                             </a>
                         </div>
                     </th>
                     <th>Date Started
                         <div>
-                            <i class="bi bi-caret-up-fill"></i>
-                            <i class="bi bi-caret-down-fill"></i>
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=dateStarted&sortDir=' + ${sortField == 'dateStarted' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
+                            </a>
                         </div>
                     </th>
                     <th>Date Finished
                         <div>
-                            <i class="bi bi-caret-up-fill"></i>
-                            <i class="bi bi-caret-down-fill"></i>
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=dateFinished&sortDir=' + ${sortField == 'dateFinished' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
+                            </a>
+
                         </div>
                     </th>
                     <th>Rating
                         <div>
-                            <a th:href="@{'/books?sortField=rating&sortDir=' + ${sortField == 'rating' && sortDir == 'asc' ? 'desc' : 'asc'}}">
-                                <i class="bi bi-caret-up-fill"></i>
-                            </a>
-                            <a th:href="@{'/books?sortField=rating&sortDir=' + ${sortField == 'rating' && sortDir == 'desc' ? 'asc' : 'desc'}}">
-                                <i class="bi bi-caret-down-fill"></i>
+                            <a th:href="@{'/books/page/' + ${currentPage} + '?sortField=rating&sortDir=' + ${sortField == 'rating' && sortDir == 'asc' ? 'desc' : 'asc'}}">
+                                <i class="bi bi-arrow-down-up"></i>
                             </a>
                         </div>
                     </th>
@@ -141,10 +128,10 @@
                     <td th:text = "${book.rating}"></td>
                     <td th:text = "${book.review}"></td>
                     <td>
-                        <a class = "btn btn-warning h5 mr-3 active" th:href = "@{'/books/edit/' + ${book.id}}">
+                        <a class = "btn btn-warning h5 mr-3 active actionBtn" th:href = "@{'/books/edit/' + ${book.id}}">
                             <i class="bi bi-pencil-square"></i>  Edit
                         </a>
-                        <a class = "btn btn-danger h5 mr-3 active" th:href = "@{'/books/delete/' + ${book.id}}">
+                        <a class = "btn btn-danger h5 mr-3 active actionBtn" th:href = "@{'/books/delete/' + ${book.id}}">
                             <i class="bi bi-trash"></i>  Delete
                         </a>
                     </td>
@@ -154,16 +141,48 @@
             </tbody>
         </table>
     </div>
-    <div class = "my-3">
-        <nav aria-label="Page navigation example">
+
+    <div th:if="${totalPages > 1}" class = "my-3">
+        <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
-                <li class="page-item" th:classappend="${pageNumber == currentPage} ? 'active'">
-                    <a class="page-link" th:href="@{'/books?page=' + ${pageNumber} + '&sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">1</a>
+                <!-- First Page -->
+                <li th:classappend="${currentPage == 1} ? 'disabled'" class="page-item">
+                    <a class="page-link" th:href="@{'/books/page/' + 1 + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}" aria-label="First">
+                        <span aria-hidden="true">&laquo;&laquo;</span>
+                    </a>
                 </li>
-                
+    
+                <!-- Previous Page -->
+                <li th:classappend="${currentPage == 1} ? 'disabled'" class="page-item">
+                    <a class="page-link" th:href="@{'/books/page/' + (${currentPage - 1}) + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+    
+                <!-- Page Numbers -->
+                <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}" th:classappend="${currentPage == i} ? 'active'">
+                    <a class="page-link" th:href="@{'/books/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+                </li>
+    
+                <!-- Next Page -->
+                <li th:classappend="${currentPage == totalPages} ? 'disabled'" class="page-item">
+                    <a class="page-link" th:href="@{'/books/page/' + (${currentPage + 1}) + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+    
+                <!-- Last Page -->
+                <li th:classappend="${currentPage == totalPages} ? 'disabled'" class="page-item">
+                    <a class="page-link" th:href="@{'/books/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}" aria-label="Last">
+                        <span aria-hidden="true">&raquo;&raquo;</span>
+                    </a>
+                </li>
             </ul>
-          </nav>
+        </nav>
     </div>
+    
+
+    
     <script src="/javascript/book.js"></script>
 </body>
 </html>
