--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Login</title>
     <link rel = "stylesheet", type = text/css th:href = "@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" >
-   
+    <link rel="stylesheet" href="/css/login.css">
+</head>
 <body>
     <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
         <div class = "container-fluid collapse navbar-collapse">
@@ -34,13 +35,13 @@
             
         </div>    
     </nav>
-
-    <div class = "container-fluid text-center my-5">
-        <h1>Welcome to Your Book Journal</h1>
-        <a class = "h2" th:href = "@{/books}">Manage Your Entry</a>
+    <div class = "container-fluid text-center my-3">
+        <div class = "text-center my-3">
+            <h1>Login</h1>
+        </div>
+        <form>
+            
+        </form>
     </div>
-    
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
